--- a/BBConfigurator/BBConfigurator.csproj
+++ b/BBConfigurator/BBConfigurator.csproj
@@ -135,6 +135,9 @@
   <ItemGroup>
     <Resource Include="ConfiguratorIcon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Worker\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
